<resources>
    <string name="app_name">KotlinMvpSamples</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="wechat">公众号</string>
    <string name="knowledge_system">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>

    <string name="go_login">去登陆</string>
    <string name="nav_grade">等级:</string>
    <string name="nav_rank">排名:</string>

    <string name="nav_my_collect">我的收藏</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_about_us">关于我们</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_my_score">我的积分</string>
    <string name="my_share">我的分享</string>

    <!-- Home -->
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="new_fresh">新</string>
    <string name="top_tip">置顶</string>

    <string name="press_again_exit">再按一次退出!</string>

    <string name="no_network">网络异常</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
    <string name="no_network_tip">请检查网络后点击重新加载</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两次密码不相同</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="user_login">用户登录</string>
    <string name="login_tip">请使用WanAndroid账号登录！</string>
    <string name="user_register">注册用户</string>
    <string name="register_tip">用户注册后才可以登录！</string>

    <!-- Search -->
    <string name="search_tint">发现更多干货</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="search_null_tint">快来搜点干货吧</string>
    <string name="action_search">搜索</string>

    <string name="text_permission_common_tip1">为了您有更好的产品体验，请将【权限】中的【</string>
    <string name="text_permission_common_tip2">】设置为允许哦</string>

    <string name="nav_line_4" translatable="false">----</string>
    <string name="nav_line_2" translatable="false">--</string>
</resources>
