<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    android:background="@color/viewBackground"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@+id/tv_user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textColor="@color/common_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/login_tip"
        android:textSize="@dimen/res_text_m"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_tip"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/tl_user_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/res_layer_main_color"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/White"
        app:layout_constraintTop_toBottomOf="@+id/tl_pwd"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/no_account"
        android:textSize="@dimen/res_text_l"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>