<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="36dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/iv_rank"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_rank_white_24dp" />

    <cn.linhome.library.view.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        android:src="@drawable/bg_head_image_loading"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/go_login"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: "
            android:textColor="@color/Grey100"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_____"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/res_text_m" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nav_grade"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/res_text_s" />

        <TextView
            android:id="@+id/tv_user_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="--"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/res_text_s" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/nav_rank"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/res_text_s" />

        <TextView
            android:id="@+id/tv_user_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="--"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/res_text_s" />

    </LinearLayout>

</LinearLayout>
